# screenfetch-meson

./: .gitignore  README.md  meson.build
include/: arrays.h  colors.h  detect.h  disp.h  error_flag.h  logos.h  misc.h  util.h  version.h
src/: arrays.c  disp.c  logos.c  main.c  util.c
src/plat/bsd/: detect.c
src/plat/linux/: detect.c
src/plat/sun/: detect.c
src/scripts/: detectgtk
